new dependencies for mongo and date creation

--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "chokidar": "^2.1.8",
+    "date-fns": "^2.21.3",
     "express": "^4.17.1",
     "live-server": "^1.2.1",
+    "mongodb": "^3.6.8",
+    "mongoose": "^5.12.10",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.7",
     "react": "~16.12",
