--- a/package.json
+++ b/package.json
@@ -2,15 +2,14 @@
   "name": "estelles-donations",
   "version": "0.9.0",
   "description": "Donation repository for item exchange",
-  "main": "server/index.js",
+  "main": "index.js",
   "scripts": {
-    "start": "npx nodemon server/index.js",
+    "start": "npx nodemon index.js",
     "jest": "",
     "start-react": "webpack --config ./webpack.config.js --mode development -w"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/styles": "^4.11.3",
+    "@material-ui/core": "^4.11.4",
     "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
@@ -32,9 +31,11 @@
     "babel-cli": "^6.18.0",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
+    "css-loader": "^5.2.5",
     "eslint": "^7.26.0",
     "eslint-plugin-react": "^7.23.2",
     "jest": "^26.6.3",
+    "style-loader": "^2.0.0",
     "supertest": "^6.1.3",
     "webpack": "^4.46.0",
     "webpack-cli": "^4.5.0"
