--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^5.12.10",
     "nodemon": "^2.0.7",
     "react": "~16.12",
+    "react-datepicker": "^3.8.0",
     "react-dom": "~16.12"
   },
   "devDependencies": {
