--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "start-react": "webpack --config ./webpack.config.js --mode development -w"
   },
   "dependencies": {
+    "@devexpress/dx-react-chart": "^2.7.5",
+    "@devexpress/dx-react-chart-material-ui": "^2.7.5",
+    "@devexpress/dx-react-core": "^2.7.5",
     "@material-ui/core": "^4.11.4",
     "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.1",
