--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start-react": "webpack --config ./webpack.config.js --mode development -w"
   },
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.11.4",
+    "@material-ui/pickers": "^3.3.10",
     "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
@@ -21,7 +23,6 @@
     "mongoose": "^5.12.10",
     "nodemon": "^2.0.7",
     "react": "~16.12",
-    "react-datepicker": "^3.8.0",
     "react-dom": "~16.12"
   },
   "devDependencies": {
