--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # sensitive files
 database/index.js
+server/AuthKeys.js
 
 # Logs
 logs
@@ -84,7 +85,7 @@ typings/
 
 # Nuxt.js build / generate output
 .nuxt
-dist
+dist/bundle.js
 
 # Gatsby files
 .cache/
