--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.19.0",
     "chokidar": "^2.1.8",
     "date-fns": "^2.21.3",
+    "date-fns-tz": "^1.1.4",
     "express": "^4.17.1",
     "live-server": "^1.2.1",
     "mongodb": "^3.6.8",
