--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "@material-ui/pickers": "^3.3.10",
     "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.1",
