--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "estelles-donations",
+  "name": "salut-nutrition",
   "version": "0.9.0",
-  "description": "Donation repository for item exchange",
+  "description": "nutrition app for tracking food and water intake",
   "main": "index.js",
   "scripts": {
     "start": "npx nodemon index.js",
@@ -12,10 +12,7 @@
     "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
-<<<<<<< HEAD
     "@material-ui/pickers": "^3.3.10",
-=======
->>>>>>> 266f72e1f85849b9560295363bea948739ca6652
     "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
