--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "nodemon": "^2.0.7",
     "react": "~16.12",
     "react-dom": "~16.12",
-    "react-google-login": "^5.2.2"
+    "react-google-login": "^5.2.2",
+    "react-minimal-pie-chart": "^8.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
