--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,15 @@
 version: 2.1
-welcome: circleci/welcome-orb@0.4.1
+welcome: circleci/node@3.0.0
 jobs:
   build_and_save:
+    executor: node/default
     steps:
     - checkout
-    - run: npm install --ignore-engines
+    - node/install-npm
+    - node/install-packages:
+      app-dir: mern-starter
+      cache-path: node_modules
+      override-ci-command: npm i
     # - run: npm run jest
     # - store_artifacts:
     #   path: coverage
