--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npx nodemon index.js",
-    "jest": "",
+    "test": "jest",
     "start-react": "webpack --config ./webpack.config.js --mode development -w"
   },
   "dependencies": {
@@ -33,9 +33,12 @@
     "react-minimal-pie-chart": "^8.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.0",
-    "@babel/preset-env": "^7.13.15",
+    "@babel/core": "^7.14.3",
+    "@babel/preset-env": "^7.14.2",
     "@babel/preset-react": "^7.13.13",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/user-event": "^13.1.3",
     "artillery": "^1.6.2",
     "babel-cli": "^6.18.0",
     "babel-jest": "^26.6.3",
@@ -50,10 +53,10 @@
     "webpack-cli": "^4.5.0"
   },
   "jest": {
-    "testEnvironment": "node",
-    "coveragePathIgnorePatterns": [
-      "/node_modules/",
-      "/schema/"
+    "testEnvironment": "jsdom",
+    "testPathIgnorePatterns": [
+      "e2e",
+      "supertest"
     ]
   }
 }
