--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "npx nodemon index.js",
-    "test": "jest",
+    "test": "jest --coverage",
+    "test:today": "jest -c client/src/components/Today/jest.config.js",
     "start-react": "webpack --config ./webpack.config.js --mode development -w"
   },
   "dependencies": {
@@ -20,12 +21,12 @@
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "chokidar": "^2.1.8",
-    "date-fns": "^2.21.3",
+    "date-fns": "^2.22.1",
     "date-fns-tz": "^1.1.4",
     "express": "^4.17.1",
     "live-server": "^1.2.1",
     "mongodb": "^3.6.8",
-    "mongoose": "^5.12.10",
+    "mongoose": "^5.12.12",
     "nodemon": "^2.0.7",
     "react": "~16.12",
     "react-dom": "~16.12",
